<resources>
    <string name="app_name">Tender Watch</string>
    <string name="facebook_app_id">1887036974871424</string>
    <string name="fb_login_protocol_scheme">fb1887036974871424</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="lets_get_started">Let"'"s get Started!</string>
    <string name="what_you_are">First, tell us what you are\nlooking for.</string>
    <string name="looking_for_tenders">I"'"m looking for Tenders.</string>
    <string name="want_post_tenders">I want to post Tenders</string>
    <string name="btn_title_contractor">Contractor</string>
    <string name="btn_title_client">Client</string>
    <string name="tender_watch">Tender\nWatch</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="hint_country">Country</string>
    <string name="hint_mobile_number">Mobile Number</string>
    <string name="hint_occupation">Occupation</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="create_an_account"><u>CREATE AN ACCOUNT</u></string>
    <string name="signin_with_facebook">Sign-In with Facebook</string>
    <string name="create_profile">Create Profile</string>
    <string name="agree_rules">I Agree</string>
    <string name="rules_and_regulations">Rules And Regulations</string>
    <string name="home">Home</string>
    <string name="upload_tender">Upload Tender</string>
    <string name="add_remove_tenders">Add/Remove Tenders</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_password">Change Password</string>
    <string name="notifications">Notifications</string>
    <string name="logout">Logout</string>
    <string name="subscription_details">Subscription Details</string>
    <string name="favorite">Favorites</string>
    <string name="add_remove_countries">Add/Remove Countries</string>
    <string name="add_remove_categories">Add/Remove Categories</string>
    <string name="submit">Submit</string>
    <string name="interested_countries">You are interested in Tenders\nfrom which Country?</string>
    <string name="interested_categories">Which Tender Category are you\ninterested in?</string>
    <string name="subscription_format">$ %d /year</string>
    <string name="upload_photo">Please upload your photo.</string>
    <string name="select_countries">Please select more than one country.</string>
    <string name="select_categories">Please select more than one category.</string>
    <string name="set_password">Set Password</string>
    <string name="hint_category">Category</string>
    <string name="hint_tender">Tender</string>
    <string name="hint_client_name">Name</string>

    <array name="test_countries">
        <item>Argentina</item>
        <item>Brazil</item>
        <item>Croatia</item>
        <item>Denmark</item>
        <item>England</item>
        <item>France</item>
        <item>Germany</item>
        <item>Holland</item>
        <item>Italy</item>
        <item>Japan</item>
        <item>Korea</item>
        <item>Luxemburg</item>
        <item>Mexico</item>
        <item>Norway</item>
        <item>Poland</item>
        <item>Qatar</item>
    </array>
</resources>
