<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_upload_tender"
            android:icon="@drawable/ic_upload_tender"
            android:title="@string/upload_tender" />
        <item
            android:id="@+id/nav_edit_tender"
            android:icon="@drawable/ic_edit_tender"
            android:title="@string/add_remove_tenders" />
        <item
            android:id="@+id/nav_edit_profile"
            android:icon="@drawable/ic_edit_profile"
            android:title="@string/edit_profile" />
        <item
            android:id="@+id/nav_change_password"
            android:icon="@drawable/ic_password"
            android:title="@string/change_password" />
        <item
            android:id="@+id/nav_notification"
            android:icon="@drawable/ic_notification"
            android:title="@string/notifications" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout" />
    </group>


</menu>
