<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextTitle"
            android:gravity="center_horizontal"
            android:text="@string/interested_countries"/>

        <TextView
            android:id="@+id/tv_total_cost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            style="@style/TextDefault"
            android:text="@string/subscription_format"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btn_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/ButtonDefault"
            android:layout_alignParentBottom="true"
            android:text="@string/next"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/country_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="top"
            app:layoutManager="LinearLayoutManager"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_above="@id/btn_next"
            tools:listitem="@layout/adapter_choose_countries"/>
    </RelativeLayout>

</LinearLayout>