<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/country_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/iv_photo"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:src="@mipmap/ic_launcher"
        android:layout_gravity="center_vertical"
        app:civ_border_width="2dp"
        app:civ_border_color="@color/colorBlack"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/activity_horizontal_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/hint_country"
                android:layout_weight="0.3"
                style="@style/TextDefault"/>
            <TextView
                android:id="@+id/tv_country"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                style="@style/TextDefault"
                android:text="Netherlands"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/hint_category"
                android:layout_weight="0.3"
                style="@style/TextDefault"/>
            <TextView
                android:id="@+id/tv_category"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                style="@style/TextDefault"
                android:text="Printing &amp; Stationery"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/hint_tender"
                android:layout_weight="0.3"
                style="@style/TextDefault"/>
            <TextView
                android:id="@+id/tv_tender"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                style="@style/TextDefault"
                android:text="Supply of Paper"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/hint_client_name"
                android:layout_weight="0.3"
                style="@style/TextDefault"/>
            <TextView
                android:id="@+id/tv_client_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                style="@style/TextDefault"
                android:text="Caesar Marx"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>